<resources>
    <string name="app_name">Xnotes</string>
    <string name="record">Record</string>
    <string name="stopRecording">Stop Recording</string>
    <string name="playRecord">Play Record</string>
    <string name="stopPlayingRecord">Stop Playing Record</string>
    <string name="concatenation">"</string>
    <string name="notes_you_add_appear_here">Notes you add appear here</string>
    <string name="select_all">SELECT ALL</string>
    <string name="login_with_google">LOGIN WITH GOOGLE</string>
    <string name="adding_your_note_in_label">Adding your note in Label</string>
    <string name="create_new_label">Create New Label</string>
    <string name="title_goes_here">Title Goes here</string>
    <string name="enter_your_description_here">Enter your description here</string>
    <string name="no_notes_in_trash">No notes in Trash</string>
    <string name="yes_delete_post">Yes delete post</string>
    <string name="take_photo">Take photo</string>
    <string name="choose_image">Choose image</string>
    <string name="recording_started">RECORDING STARTED</string>
    <string name="voice_note_preferences">voice note preferences</string>
    <string name="done">DONE</string>
    <string name="date">Date</string>
    <string name="new_ideas">New Ideas</string>
    <string name="label">label</string>
    <string name="edit_labels">Edit Labels</string>
    <string name="images">Images</string>
    <string name="rushabh_patel">Rushabh Patel</string>
    <string name="rushabhpatel381_gmail_com">rushabhpatel381@gmail.com</string>
    <string name="all_notes">ALL NOTES</string>
    <string name="lables">LABLES</string>
    <string name="edit">Edit</string>
    <string name="add_new_label">+ Add New Label</string>
    <string name="notes">NOTES</string>
    <string name="imagesstring">IMAGES</string>
    <string name="audio">AUDIO</string>
    <string name="trash">TRASH</string>
    <string name="logout">LOGOUT</string>
    <string name="notes_string">Notes</string>
    <string name="search_in_new_ideas">Search in “ new ideas “</string>
    <string name="create_a_note">Create a note ...</string>
    <string name="add_image">Add image</string>

</resources>
