<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="15dp"
    android:background="@color/transparent"
    android:orientation="vertical"
    app:cardCornerRadius="9dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="15dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/recording_started"
            android:textColor="@color/black"
            android:textSize="16.7sp" />

        <EditText
            android:id="@+id/voice_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:hint="@string/voice_note_preferences"
            android:maxLength="30"
            android:paddingTop="15dp"
            android:paddingBottom="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_shade"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/record_btn"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@color/transparent"
            android:padding="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/record" />

        <Chronometer
            android:id="@+id/chronometerTimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:fontFamily="@font/roboto_medium"
            android:textColor="@android:color/black"
            android:textSize="16.7sp" />

        <TextView
            android:id="@+id/label_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/gray_rect"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_regular"
            android:maxLines="1"
            android:paddingLeft="8dp"
            android:paddingTop="3dp"
            android:paddingRight="8dp"
            android:paddingBottom="5dp"
            android:text="@string/label"
            android:textColor="@color/black_shade"
            android:textSize="13.7dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/recording_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="15sp"
            android:layout_marginRight="30dp"
            android:background="@drawable/green_rect"
            android:gravity="center"
            android:text="@string/done"
            android:textColor="#047b00"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/time_and_date_of_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/date"
            android:textSize="12.3sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>