<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NotesPostActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <include layout="@layout/toolbar" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13.3dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="13.3dp"
                android:layout_marginBottom="10dp"
                android:clipToPadding="false"
                android:orientation="vertical"
                android:paddingBottom="50dp">

                <EditText
                    android:id="@+id/new_note_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#00000000"
                    android:fontFamily="@font/notoserif_bold"
                    android:hint="@string/title_goes_here"
                    android:maxLength="80"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="16.7sp" />

                <TextView
                    android:id="@+id/time_and_date_of_post"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_regular"
                    android:layout_marginStart="10dp"
                    android:textColor="@color/gray_shade"
                    android:textSize="12sp"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20sp"
                    android:background="@color/gray_shade" />

                <EditText
                    android:id="@+id/new_note_content"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:background="@color/transparent"
                    android:fontFamily="@font/roboto_medium"
                    android:gravity="top"
                    android:hint="@string/enter_your_description_here"
                    android:lineSpacingExtra="5dp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grayshade"
                    android:textSize="13.3sp" />

            </LinearLayout>
        </ScrollView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="17dp">

            <TextView
                android:id="@+id/adding_notes_in_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/adding_your_note_in_label"
                android:textColor="@color/dark_shade"
                android:textSize="11.7sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tag_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="2dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:fontFamily="@font/roboto_regular"
                android:maxLength="30"
                android:singleLine="true"
                android:text="@string/label"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:visibility="gone" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/select_clr_recy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:clipToPadding="false"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="5dp" />

    </LinearLayout>
</LinearLayout>