<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:elevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_drawer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="13dp"
                        android:layout_marginRight="13dp"
                        android:layout_marginBottom="5dp"
                        android:clipToPadding="false"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/white"
                            android:orientation="horizontal"
                            android:paddingLeft="3dp">

                            <ImageView
                                android:id="@+id/expanded_menu"
                                android:layout_width="37dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:layout_margin="7dp"
                                android:padding="11sp"
                                android:scaleType="fitXY"
                                android:src="@drawable/ic_navigation" />

                            <TextView
                                android:id="@+id/name_of_tag"
                                android:layout_width="240dp"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:fontFamily="@font/roboto_medium"
                                android:text="@string/notes_string"
                                android:textColor="@color/black"
                                android:textSize="17sp" />

                            <ImageView
                                android:id="@+id/search"
                                android:layout_width="40dp"
                                android:layout_height="40dp"
                                android:layout_gravity="center"
                                android:padding="10dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_search"
                                app:tint="#454545" />

                            <ImageView
                                android:id="@+id/grid_menu"
                                android:layout_width="40dp"
                                android:layout_height="35dp"
                                android:layout_gravity="center"
                                android:layout_marginRight="10dp"
                                android:padding="12dp"
                                android:scaleType="centerCrop"
                                android:src="@drawable/ic_menu_grid"
                                app:tint="#000000" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardview_search_notes"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="13sp"
                        android:visibility="gone"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="2dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:orientation="horizontal"
                            android:padding="3dp">

                            <ImageView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginTop="1.5dp"
                                android:padding="5dp"
                                android:src="@drawable/ic_search"
                                app:tint="@color/black" />

                            <EditText
                                android:id="@+id/search_notes_txt"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_marginLeft="10dp"
                                android:background="@color/transparent"
                                android:fontFamily="@font/roboto_medium"
                                android:hint="@string/search_in_new_ideas"
                                android:inputType="text"
                                android:paddingTop="11sp"
                                android:paddingBottom="10dp"
                                android:textColor="@color/black"
                                android:textColorHint="@color/black"
                                android:textSize="13.3sp" />

                        </LinearLayout>

                    </androidx.cardview.widget.CardView>

                </FrameLayout>

            </LinearLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview_show_updates"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginBottom="5dp"
            android:clipToPadding="false"
            android:visibility="gone"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="7dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <ImageView
                        android:id="@+id/cancel"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_weight="1"
                        android:padding="6dp"
                        android:src="@drawable/ic_clear"
                        app:tint="@color/black" />

                    <TextView
                        android:id="@+id/select_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:fontFamily="@font/roboto_medium"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="@string/select_all"
                        android:textColor="@color/black"
                        android:textSize="13.3sp" />

                    <ImageView
                        android:id="@+id/delete_all"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="40dp"
                        android:padding="6dp"
                        android:src="@drawable/ic_delete"
                        app:tint="@color/black" />

                    <ImageView
                        android:id="@+id/create_new_label"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right"
                        android:layout_marginRight="5dp"
                        android:padding="6dp"
                        android:src="@drawable/ic_tag"
                        app:tint="@color/black" />

                </FrameLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:overScrollMode="never"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:focusable="false"
                android:clipToPadding="false"
                android:paddingBottom="80dp"
                android:orientation="vertical"
               >

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/transparent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="50dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/empty_state"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            android:src="@drawable/empty_state_for_notes" />

                        <TextView
                            android:id="@+id/empty_state_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginTop="15dp"
                            android:fontFamily="@font/roboto_regular"
                            android:gravity="center"
                            android:text="@string/notes_you_add_appear_here"
                            android:textColor="@color/black"
                            android:textSize="13sp" />

                    </LinearLayout>

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/main_notes_list"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="6dp"
                        android:clipToPadding="false"
                        android:layout_marginTop="20dp"
                        android:focusableInTouchMode="true"
                        android:nestedScrollingEnabled="false"
                        android:paddingBottom="40dp" />

                </FrameLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            app:cardElevation="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="2dp"
                android:paddingTop="7dp"
                android:paddingEnd="7dp"
                android:paddingBottom="7dp">

                <TextView
                    android:id="@+id/add_notes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:layout_weight="1"
                    android:background="@color/transparent"
                    android:drawableTint="@color/gray"
                    android:fontFamily="@font/sf_pro_display_medium"
                    android:padding="5dp"
                    android:text="@string/create_a_note"
                    android:textColor="@color/gray"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/choose_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/ic_picture" />

                <ImageView
                    android:id="@+id/voice_recorder"
                    android:layout_width="38dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="15dp"
                    android:padding="10dp"
                    android:src="@drawable/microphone" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <include layout="@layout/navigation_layout" />

</androidx.drawerlayout.widget.DrawerLayout>